added new navigator view options

--- a/bundles/org.eclipse.platform.doc.user/concepts/cnav.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/cnav.htm
@@ -41,6 +41,12 @@ The toolbar of the Navigator view contains the following buttons:</P>
   <dt>Up</dt>
   <dd>Displays the hierarchy of the parent of the
 current highest level resource.</dd>
+  <dt>Collapse All</dt>
+  <dd>Collapses the tree expansion state of all resources in the view.</dd>
+  <dt>Link with Editor</dt>
+  <dd>Toggles whether the Navigator view selection is linked to the active editor.
+  When this option is selected, changing the active editor will automatically update the 
+  Navigator selection to the resource being edited.</dd>
   <dt>Menu</dt>
   <dd>Provides menu items that allow you to sort or filter the contents of the
     Navigator view</dd>
