Fixed minor typographical errors

--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-14.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-14.htm
@@ -15,7 +15,7 @@ references as prerequisite relationships. Alternatively, you can explicitly
 define the order in which projects are built.
 </p>
 
-<p>The Build Order Preferences page allows you to disable the <b>Use default build 
+<p>The Build Order preference page allows you to disable the <b>Use default build 
 order</b> option so that you can access the projects list and manipulate 
 the order of it.
 </p>
@@ -24,9 +24,9 @@ the order of it.
 </p>
 
 <ol>
-  <li>Click <b>Window </b> &gt; <b>Preferences</b> to open the Preferences page.</li>
+  <li>Click <b>Window </b> &gt; <b>Preferences</b> to open the Preferences dialog.</li>
   <li>Select the <b>Build Order</b> category in the left pane. The Build Order 
-    Preferences page opens, listing the projects for the build.</li>
+    preference page opens, listing the projects for the build.</li>
   <li>Ensure that the <b>Use default build order</b> check box is cleared. If 
     it is selected, the buttons on this page are disabled, and builds are performed 
     in the order of the project list.</li>
@@ -34,7 +34,7 @@ the order of it.
     add and remove projects from the list.</li>
   <li>Select one or more projects in the list and click <b>Up</b> or <b>Down </b>to 
     to set the preferred project build order.</li>
-  <li>Click <b>OK</b> to close the Preferences page.</li>
+  <li>Click <b>OK</b> to close the Preferences dialog.</li>
 </ol>
 
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
