--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-92.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-92.htm
@@ -19,7 +19,7 @@ valid repository location in the Workbench.
 </P>
 
 <ol>
-  <li>Open the CVS Repositories View by selecting <b>Window &gt; Show View &gt; 
+  <li>Open the CVS Repositories view by selecting <b>Window &gt; Show View &gt; 
     Other...</b> on the main menu bar and then selecting <b>CVS &gt; CVS Repositories</b> 
     from the Show View dialog. Alternatively, the CVS Repositories view is also 
     shown in the CVS Repository Exploring perspective. </li>
@@ -51,7 +51,7 @@ valid repository location in the Workbench.
         port number.</li>
     </ol>
   </li>
-  <li>(Optional) Select the <b>Validate connection on finish</b> if you want to 
+  <li>(Optional) Select <b>Validate Connection on Finish</b> if you want to 
     authenticate the specified user to the specified host when you close this 
     wizard. (If you do not select this option, the user name will be authenticated 
     later, when you try to access the contents of the repository.)</li>
