--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-95.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-95.htm
@@ -4,12 +4,12 @@
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Changing the properties of a CVS Repository Location</title>
+<title>Changing the properties of a CVS repository location</title>
 <meta name="keyword" content="team">
 </HEAD>
 
 <BODY BGCOLOR="#ffffff">
-<H1>Changing the properties of a CVS Repository Location</H1>
+<H1>Changing the properties of a CVS repository location</H1>
 
 <P>You can change certain properties of an existing repository location. 
 The properties that can be changed are the connection method, user name 
