--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-9k.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-9k.htm
@@ -14,8 +14,8 @@ can also control several other key aspects of a perspective. These include:
 </p>
 <ul>
   <li>The options available on the <b>File &gt; New</b> submenu.</li>
-  <li>The options available on the <b> Window &gt; Open Perspective</b> submenu.</li>
-  <li>The options available on the <b> Window &gt; Show View</b> menu submenu.</li>
+  <li>The options available on the <b>Window &gt; Open Perspective</b> submenu.</li>
+  <li>The options available on the <b>Window &gt; Show View</b> submenu.</li>
   <li>Action sets (buttons and menu options) that show up on the toolbar and menu bar.</li>
 </ul>
 
