changed Cntr to ALt

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-176.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-176.htm
@@ -20,21 +20,21 @@
     </p>
     <ul>
       <li>
-        In a Java editor, (optionally) select some text and press <kbd>Ctrl+Shift+Arrow Up</kbd> or select <strong>Edit &gt; Expands Selection To &gt; Enclosing
+        In a Java editor, (optionally) select some text and press <kbd>Alt+Shift+Arrow Up</kbd> or select <strong>Edit &gt; Expands Selection To &gt; Enclosing
         Element</strong> from the menu bar.
       </li>
       <li>
         The current text selection is expanded to the inner-most syntax element (more precisely, <u>A</u>bstract <u>S</u>yntax <u>T</u>ree node) that encloses the selection.
       </li>
     </ul>
-    When a statement or a list of statements is selected, you can press <kbd>Ctrl+Shift+Arrow Right</kbd> or select <strong>Edit &gt; Expands Selection To &gt; Next
+    When a statement or a list of statements is selected, you can press <kbd>Alt+Shift+Arrow Right</kbd> or select <strong>Edit &gt; Expands Selection To &gt; Next
     Element</strong>, which will expand the selection with the statement (if any exists) that is immediately <em>after</em> the selected statements. 
     <p>
-      When a statement or a list of statements is selected, you can press <kbd>Ctrl+Shift+Arrow Left</kbd> or select <strong>Edit &gt; Expands Selection To &gt; Previous
+      When a statement or a list of statements is selected, you can press <kbd>Alt+Shift+Arrow Left</kbd> or select <strong>Edit &gt; Expands Selection To &gt; Previous
       Element</strong>, which will expand the selection with the statement (if any exists) that is immediately <em>before</em> the selected statements.<br>
     </p>
     <p>
-      Pressing <kbd>Ctrl+Shift+Arrow Down</kbd> or selecting <strong>Edit &gt; Expands Selection To &gt; Restore Last Selection</strong> from the menu bar lets you restore
+      Pressing <kbd>Alt+Shift+Arrow Down</kbd> or selecting <strong>Edit &gt; Expands Selection To &gt; Restore Last Selection</strong> from the menu bar lets you restore
       the previous structured selection.
     </p>
     <p>
