Fixed CHKPII errors

--- a/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
+++ b/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
@@ -3,10 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Language" content="en-us">
-
-<meta http-equiv="Content-Type"
-	content="text/html; charset=ISO-8859-1">
-
+<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 
 <link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1"
 	type="text/css">
