updated action name

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-179.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-179.htm
@@ -21,10 +21,10 @@
         Do one of the following: 
         <ul>
           <li>
-            From the menu bar, select <strong>Source &gt; Surround with try/catch</strong> or
+            From the menu bar, select <strong>Source &gt; Surround with try/catch Block</strong> or
           </li>
           <li>
-            From the editors pop-up menu, select <strong>Source &gt; Surround with try/catch block</strong>
+            From the editors pop-up menu, select <strong>Source &gt; Surround with try/catch Block</strong>
           </li>
         </ul>
       </li>
