--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-18.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-18.htm
@@ -23,14 +23,14 @@
       <li>
         Edit the&nbsp;<strong>Source Folder</strong> field as needed to indicate in which folder you want the new class to reside. You can either type a path or
         click the&nbsp;<strong>Browse</strong> button to find the folder. If a folder is found for the current selection, that folder appears in
-        the&nbsp;<strong>Folder</strong> field as the container for the new class.
+        the&nbsp;<strong>Source Folder</strong> field as the container for the new class.
       </li>
       <li>
         In the&nbsp;<strong>Package</strong> field, type or click&nbsp;<strong>Browse</strong> to select the package where you want the new class
         to reside. Leave this field empty to indicate that you want the new class to be created in the default package.
       </li>
       <li>
-        Leave the&nbsp;<strong>Enclosing Type</strong> box deselected.
+        Leave the&nbsp;<strong>Enclosing type</strong> box deselected.
       </li>
       <li>
         In the&nbsp;<strong>Name</strong> field, type a name for the new class.
