removed obsolete context menu action

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-180.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-180.htm
@@ -20,11 +20,8 @@
       </li>
       
   <li> Select the compilation unit in which you want to externalize strings and 
-    selecting <strong>Source &gt; Externalize Strings</strong> from the menu bar 
-    or </li>
-      <li>
-        In the Java editor, select <strong>Source &gt; Externalize Strings</strong> from the pop-up menu
-      </li>
+    selecting <strong>Source &gt; Externalize Strings</strong> from the menu bar. 
+  </li>
     </ul>
     
 <p> <strong>Note:</strong> Externalizing strings is undoable (with the same restrictions 
