--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-182.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-182.htm
@@ -14,11 +14,11 @@
     <p>To use Incremental Find:</p>
 
     <ol>
-      <li>In the text (or Java) editor, press <kbd>Ctrl</kbd>+<kbd>J</kbd> or select <span class="control">Edit &gt; Incremental Find</span> from the menu bar</li>
+      <li>In the text (or Java) editor, press <kbd>Ctrl</kbd>+<kbd>J</kbd> or select <span class="control">Edit &gt; Incremental Find Next</span> from the menu bar.</li>
 
       <li>The workbench status line displays "Incremental Find:". The editor is now in the Incremental Find mode.</li>
 
-      <li>As you type, the editor finds the next occurrence of the text and updates the selection after each character typed</li>
+      <li>As you type, the editor finds the next occurrence of the text and updates the selection after each character typed.</li>
 
       <li>Navigate to the next or previous match by pressing <kbd>Arrow Down</kbd> or <kbd>Arrow Up</kbd>.</li>
 
