modify params is now called change signature

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-158.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-158.htm
@@ -13,26 +13,23 @@
       Parameters page
     </h1>
     <h1>
-      <img src="../images/tasks-32.gif" width="347" height="418" alt="Parameters Page for the Reordering method parameters Refactoring Command">
+      <img src="../images/tasks-32.gif" alt="Parameters Page for the Reordering method parameters Refactoring Command">
     </h1>
-    <p>
-      Parameters Page for the Reordering method parameters Refactoring Command
-    </p>
-    <ul>
-      <li>
-        Select one or more parameters
-      </li>
-      <li>
-        Use the <strong>Move Up</strong> and <strong>Move Down</strong> buttons to reorder the parameters (you can see a signature preview below the parameter list)
-      </li>
-      <li>
-        Press <strong>Next</strong> to see the preview or <strong>Finish</strong> to perform the refactoring without seeing the preview
-      </li>
-    </ul>
-    <p>
-      This refactoring reorders parameters in the selected method and all methods that override it.<br>
-      Also, all references will be updated to use the new order of parameters.
-    </p>
+    
+<p> Parameters Page for the Change Method Signature refactoring command </p>
+<ul>
+  <li>Select one or more parameters and use the <strong>Move Up</strong> and <strong>Move 
+    Down</strong> buttons to reorder the parameters (you can see a signature preview 
+    below the parameter list) </li>
+  <li>Use the <b>Add</b> button to add a paremeter; you can then edit its type, 
+    name and default value in the table</li>
+  <li> Press <strong>Preview</strong> to see the preview or <strong>Finish</strong> 
+    to perform the refactoring without seeing the preview </li>
+</ul>
+    
+<p> This refactoring changes the signature of the selected method and all methods 
+  that override it.<br>
+  Also, all references will be updated to use the signature. </p>
     <p>
       Related Topics:
     </p>
