--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-204.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-204.htm
@@ -36,7 +36,7 @@
      <a href="tasks-159.htm">Extracting a local variable</a><br>
      <a href="tasks-161.htm">Inlining a local variable</a><br>
      <a href="tasks-98.htm">Renaming method parameters</a><br>
-     <a href="tasks-157.htm">Reordering method parameters</a><br>
+     <a href="tasks-157.htm">Changing method signature</a><br>
      <a href="tasks-164.htm">Replacing a local variable with a query</a><br>
     </p>
 
