--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-98.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-98.htm
@@ -53,7 +53,7 @@
       <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159">
     </p>
     <p>
-      <a href="tasks-157.htm">Reordering method parameters</a>
+      <a href="tasks-157.htm">Changing method signature</a>
     </p>
     <p>
       <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159">
