--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-191.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-191.htm
@@ -16,22 +16,22 @@
     3 member filters:</p>
 
     <ul>
-      <li><span class="control">Hide Fields</span>: when toggled on, this filter will cause all fields to be removed from the view.</li>
+      <li><span class="control">Hide Fields</span>: when activated, this filter causes all fields to be removed from the view.</li>
 
-      <li><span class="control">Hide Static Members</span>: when toggled on, this filter will cause all static members to be removed from the view.</li>
+      <li><span class="control">Hide Static Members</span>: when activated, this filter causes all static members to be removed from the view.</li>
 
-      <li><span class="control">Hide Non-Public Members</span>: when toggled on, this filter will cause all non-public members to be removed from the view.</li>
+      <li><span class="control">Hide Non-Public Members</span>: when activated, this filter causes all non-public members to be removed from the view.</li>
     </ul>
-    Additionally, Package Explorer can display or hide all elements inside compilation units. 
+    Additionally, the Package Explorer can display or hide all elements inside compilation units. 
 
-    <p>To show members in Package Explorer:</p>
+    <p>To show members in the Package Explorer:</p>
 
     <ul>
       <li>Select the <span class="control"> Show members in Package Explorer</span> checkbox
         in the <span class="control">Window &gt; Preferences &gt; Java &gt; Appearance
         </span>page.</li>
     </ul>
-    To hide members in Package Explorer: 
+    To hide members in the Package Explorer: 
 
     <ul>
       <li>Clear the <span class="control"> Show members in Package Explorer</span> checkbox
