--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-194.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-194.htm
@@ -16,25 +16,25 @@
     <p>To show full package names:</p>
 
     <ul>
-      <li>Clear the <span class="control"> Compress package name segments</span> checkbox
+      <li>Clear the <span class="control"> Compress all package name segments, except the final segment</span> checkbox
         on the <span class="control">Window &gt; Preference &gt; Java &gt; Appearance
-        </span> page&nbsp;</li>
+        </span> page</li>
     </ul>
     To show compressed package names: 
 
     <ul>
       <li>
-        <p>Check the <span class="control"> Compress package name segments</span> 
+        <p>Check the <span class="control"> Compress all package name segments, except the final segment</span> 
         checkbox on the <span class="control">Window &gt; Preference &gt; Java &gt; Appearance
-        </span> page&nbsp;</p>
+        </span> page</p>
 
         <p>Compression patterns control how many characters of each package name
-        segment are displayed.&nbsp; The last segment of a package name is
+        segment are displayed. The last segment of a package name is
         always displayed.</p>
         <p>A compression pattern of &quot;.&quot; indicates that only the
-        separating periods are shown to represent a segment.&nbsp; A digit (n)
-        in a compression pattern represents the first n characters of a package name segment.&nbsp;
-        Examples are the best way to understand compression patterns.&nbsp; The
+        separating periods are shown to represent a segment. A digit (n)
+        in a compression pattern represents the first n characters of a package name segment.
+        Examples are the best way to understand compression patterns. The
         package <span class="control">org.eclipse.jdt </span>would be displayed
         as follows using the example compression patterns:</p>
         <p> <span class="control">.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>..jdt</p>
