--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-195.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-195.htm
@@ -11,7 +11,8 @@
   <body>
     <h1>Sorting elements in Java views</h1>
 
-    <p>Members and Outline views can present members sorted or in the order of declaration in compilation unit.</p>
+    <p>Members and Outline views can present members sorted
+    or in the order of declaration in the compilation unit.</p>
 
     <p>To sort members:</p>
 
@@ -30,7 +31,7 @@
 
       <li>After the above sorting is performed, members in each group are sorted alphabetically</li>
     </ul>
-    To present members in the order of declaration in compilation unit. 
+    To present members in the order of declaration in the compilation unit. 
 
     <ul>
       <li>Toggle off the <span class="control">Sort</span> toolbar button in the Java view</li>
