--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-202.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-202.htm
@@ -29,10 +29,10 @@
       <li>If it is not visible, press the <span class="control">Customize</span> button and select the <span class="control">NLS Keys</span> checkbox, press <span class=
       "control">OK</span> to close the dialog and switch to the <span class="control">NLS Key</span> tab.</li>
 
-      <li>In the <span class="control">Resource</span> bundle accessor class field, enter the name of the class that you use to retrieve strings from the property file. You can
+      <li>In the <span class="control">Resource bundle accessor class</span> field, enter the name of the class that you use to retrieve strings from the property file. You can
       use the <span class="control">Browse</span> button to select the class from a list.</li>
 
-      <li>In the <span class="control">Property</span> file name field, enter the name of the property file. You can use the <span class="control">Browse</span> button to select
+      <li>In the <span class="control">Property file name</span> field, enter the name of the property file. You can use the <span class="control">Browse</span> button to select
       the file.</li>
 
       <li>Select the scope of the search by using the controls in the <span class="control">Scope</span> group.</li>
@@ -40,7 +40,7 @@
       <li>Press <span class="control">Search</span></li>
     </ul>
 
-    <p>After the search is finished, the Search Result view displays a list of unused keys in the property file and of all incorrect references to non-existing keys.</p>
+    <p>After the search is finished, the Search Result view displays a list of unused keys in the property file and all incorrect references to non-existing keys.</p>
 
     <p class="Note">Note: This feature assumes that the resource bundle accessor class used a method called <em>getString</em> with a single <em>String</em> parameter to retrieve
     strings from the property file.</p>
