updated the refactoring section

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-163.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-163.htm
@@ -13,7 +13,7 @@
       Parameters page
     </h1>
     <h1>
-      <img src="../images/tasks-163a.gif" width="433" height="326" alt="Parameters Page for the Self Encapsulate Field Refactoring Command">
+      <img src="../images/tasks-163a.gif" alt="Parameters Page for the Self Encapsulate Field Refactoring Command">
     </h1>
     <p>
       Parameters Page for the Self Encapsulate Field Refactoring Command
@@ -43,9 +43,9 @@
           </li>
         </ul>
       </li>
-      <li>
-        Press <strong>Next</strong> to perform refactoring with preview or press <strong>Finish</strong> to perform refactoring without preview.
-      </li>
+      
+  <li> Press <strong>Preview</strong> to perform refactoring with preview or press 
+    <strong>OK</strong> to perform refactoring without preview. </li>
     </ul>
     <p>
       Related Topics:
