--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-166.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-166.htm
@@ -9,28 +9,30 @@
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
   </head>
   <body>
+    
+<h1> Parameters page </h1>
+<h1>&nbsp; </h1>
     <h1>
-      Parameters page
+      <img src="../images/tasks-166a.gif" alt="Pulling members up to superclass Refactoring Command">
     </h1>
-    <h1>
-      <img src="../images/tasks-166a.gif" width="555" height="548" alt="Pulling members up to superclass Refactoring Command">
-    </h1>
-    <p>
-      Parameters Page for the Pulling members up to superclass Refactoring Command
-    </p>
-    <ul>
-      <li>
-        In the left pane, select the methods that you want to be deleted after pull up (so that the superclass implementation can be used instead). <br>
-		<strong>Note:</strong> the methods
-        originally selected when invoking the refactoring are pre-selected in the left pane
-      </li>
-      <li>
-        Press <strong>Next</strong> to see the preview or press <strong>Finish</strong> to perform the refactoring without preview
-      </li>
-    </ul>
-    <p>
-      <strong>Note:</strong> you will not see the parameters page if you pull up fields only.
-    </p>
+    
+<p> Parameters Page for the Pulling members up to superclass Refactoring Command 
+</p>
+<ul>
+  <li>Select the destination class</li>
+  <li>In the list, select the member that you want to pull up or declare abstract</li>
+  <li> Press <strong>Next</strong> to see the next page or press <strong>Finish</strong> 
+    to perform the refactoring</li>
+</ul>
+<p><img src="../images/tasks-166b.gif" width="506" height="530"></p>
+<ul>
+  <li>In the left pane, select the methods that you want to be deleted after pull 
+    up (so that the superclass implementation can be used instead). <br>
+    <strong>Note:</strong> the methods originally selected when invoking the refactoring 
+    are pre-selected in the left pane </li>
+  <li> Press <strong>Next</strong> to see the preview or press <strong>Finish</strong> 
+    to perform the refactoring</li>
+</ul>
     <p>
       Related Topics:
     </p>
