--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-168.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-168.htm
@@ -13,7 +13,7 @@
       Parameters page
     </h1>
     <h1>
-      <img src="../images/tasks-168a.gif" width="520" height="231" alt="Parameters Page for the Moving static members between types Refactoring Command">
+      <img src="../images/tasks-168a.gif" alt="Parameters Page for the Moving static members between types Refactoring Command">
     </h1>
     <p>
       Parameters Page for the Moving static members between types Refactoring Command
@@ -22,9 +22,9 @@
       <li>
         Use the text field to enter the destination type name or press the <strong>Browse</strong> button to see a list of types.
       </li>
-      <li>
-        Press <strong>Next</strong> to see a preview or press <strong>Finish</strong> to perform the refactoring without preview.
-      </li>
+      
+  <li> Press <strong>Preview</strong> to see a preview or press <strong>OK</strong> 
+    to perform the refactoring without preview. </li>
     </ul>
     <p>
       Related Topics:
