--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-158.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-158.htm
@@ -23,7 +23,7 @@
     below the parameter list) </li>
   <li>Use the <b>Add</b> button to add a paremeter; you can then edit its type, 
     name and default value in the table</li>
-  <li> Press <strong>Preview</strong> to see the preview or <strong>Finish</strong> 
+  <li> Press <strong>Preview</strong> to see the preview or <strong>OK</strong> 
     to perform the refactoring without seeing the preview </li>
 </ul>
     
