--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-160.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-160.htm
@@ -13,7 +13,7 @@
       Parameters page
     </h1>
     <h1>
-      <img src="../images/tasks-160a.gif" width="463" height="307" alt="Parameters Page for the Extracting a local variable Refactoring Command">
+      <img src="../images/tasks-160a.gif" alt="Parameters Page for the Extracting a local variable Refactoring Command">
     </h1>
     <p>
       Parameters Page for the Extracting a local variable Refactoring Command
@@ -29,9 +29,9 @@
       <li>
         Optionally, select <strong>Define the local variable as 'final'</strong>
       </li>
-      <li>
-        Press <strong>Next</strong> to see the preview of the changes or <strong>Finish</strong> to perform the refactoring without preview
-      </li>
+      
+  <li> Press <strong>Preview</strong> to see the preview of the changes or <strong>OK</strong> 
+    to perform the refactoring without preview </li>
     </ul>
     <p>
       Related Topics:
